--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-blake3 = "1.5.0"
-pqcrypto-falcon = "0.3.0"
-pqcrypto-traits = "0.3.5"
+blake3 = {version = "1.5.0", default-features = false}
+pqcrypto-falcon = {version ="0.3.0", default-features = false}
+pqcrypto-traits = {version = "0.3.5", default-features = false}
 sp-core = "27.0.0"
